--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-Flask== 2.2.3
-gunicorn==20.0.4
-requests==2.24.0
-
+beautifulsoup4==4.12.2
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+flask==3.0.0
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+requests==2.31.0
+soupsieve==2.5
+urllib3==2.0.7
+werkzeug==3.0.1
+zipp==3.17.0
