--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-beautifulsoup4==4.12.2
-blinker==1.4
-certifi==2023.7.22
-charset-normalizer==3.3.2
-click==8.1.7
+beautifulsoup4
+blinker
+certifi
+charset-normalizer
+click
 flask
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-requests==2.31.0
+idna
+itsdangerous
+Jinja2
+MarkupSafe
+requests
 soupsieve
-urllib3==2.0.7
+urllib3
 werkzeug
-zipp==3.17.0
+zipp
